--- a/app.css
+++ b/app.css
@@ -5,7 +5,7 @@ body {
     background-color: #f3f3f3;
 }
 header {
-    background-color: #4CAF50;
+    background-color: #7AA2C5;
     color: white;
     padding: 15px;
     text-align: center;
@@ -33,7 +33,7 @@ main h1 {
     color: #333333;
 }
 footer {
-    background-color: #4CAF50;
+    background-color: #7AA2C5;
     color: white;
     text-align: center;
     padding: 10px;
