--- a/HomeScreen/home.css
+++ b/HomeScreen/home.css
@@ -23,7 +23,17 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: white;
-    padding: 10px;
+    padding: 10px 20px;
+    background-color: #5B87A7;
+    border-radius: 30px;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+nav ul li a:hover {
+    background-color: #7AA2C5;
+    transform: translateY(-2px);
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
 }
 main {
     padding: 20px;
