--- a/Messages/ClientSide/Messages.css
+++ b/Messages/ClientSide/Messages.css
@@ -1,52 +1,64 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Open Sans", sans-serif;
     background-color: #f3f3f3;
-    margin: 0;
-    padding: 0;
   }
   
   header {
     background-color: #7AA2C5;
     color: white;
+    padding: 15px;
     text-align: center;
-    padding: 20px;
   }
   
-  header h1 {
-    margin: 0;
-  }
-  
-  main {
-    padding: 20px;
+  .container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  form {
+  .message-container {
     width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 80%;
+    overflow-y: scroll;
+    background-color: white;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
     margin-bottom: 20px;
   }
   
-  textarea {
-    margin-bottom: 10px;
+  .input-container {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
   }
   
-  button {
+  textarea {
+    width: 80%;
+    height: 80px;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    margin-right: 20px;
+    resize: none;
+  }
+  
+  button[type="submit"] {
     background-color: #7AA2C5;
     color: white;
-    border: none;
+    font-size: 18px;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    border: none;
     cursor: pointer;
   }
   
-  #message-container {
-    width: 80%;
-    background-color: white;
-    border-radius: 5px;
-    padding: 20px;
+  button[type="submit"]:hover {
+    background-color: #4492A8;
   }
