--- a/HomeScreen/home.css
+++ b/HomeScreen/home.css
@@ -10,6 +10,11 @@ header {
     padding: 15px;
     text-align: center;
 }
+  
+header img {
+    height: 100px;
+    margin-right: auto;
+  }
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -52,3 +57,4 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
